--- a/haveheart/index.html
+++ b/haveheart/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Have Heart</title>
-    <link rel="stylesheet" href="/home/usuario/Documents/projetosExternos/portfolio/haveheart/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/47209902f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
